--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-bootstrap-table-next": "^2.0.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "react-ace": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,7 +21,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://heutsr.aka.corp.amazon.com:3001/",
   "browserslist": [
     ">0.2%",
     "not dead",
