--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "mysql": "^2.16.0",
-    "node-redshift": "0.1.5"
+    "node-redshift": "0.1.5",
+    "aws-sdk": "^2.417.0"
   }
 }
