--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "lodash": "^4.17.11",
+    "npm": "^6.9.0",
     "react": "^16.7.0",
+    "react-ace": "^6.4.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-bootstrap-table-next": "^2.0.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2",
-    "react-ace": "^6.4.0"
+    "react-scripts": "2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
