--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "react-bootstrap-table-next": "^2.0.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "react-plotly.js": "^2.3.0",
+    "plotly.js": "^1.45.2"
   },
   "scripts": {
     "start": "react-scripts start",
