--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,18 @@
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.11",
     "npm": "^6.9.0",
+    "plotly.js": "^1.45.2",
     "react": "^16.7.0",
     "react-ace": "^6.4.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-bootstrap-table-next": "^2.0.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "react-plotly.js": "^2.3.0",
-    "plotly.js": "^1.45.2"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
